# localctrl

./: .gitignore  README.md  TODO.md  main.py  pyproject.toml  setup.py
backend/: go.mod  go.sum  main.go
backend/auth/: handler.go  handler_test.go  jwt.go  jwt_test.go  store.go  store_test.go
backend/capture/: encoder_h264.go  encoder_jpeg.go  screen.go
backend/chat/: chat.go  chat_test.go
backend/clipboard/: clipboard.go
backend/config/: config.go  config_test.go
backend/filemanager/: handler.go  handler_test.go
backend/input/: input.go
backend/proxy/: handler.go  proxy.go  proxy_test.go
backend/server/: server.go  tls.go
backend/sysinfo/: info.go  info_test.go
backend/terminal/: pty.go  pty_test.go
backend/ws/: hub.go  hub_test.go  protocol.go
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: Chat.tsx  FileManager.tsx  PortForward.tsx  RemoteDesktop.tsx  Settings.tsx  StatusBar.tsx  Terminal.tsx
frontend/src/hooks/: useAuth.ts  useWebSocket.ts
frontend/src/i18n/: index.ts
frontend/src/pages/: Login.tsx  Panel.tsx
frontend/src/types/: protocol.ts
src/: main.py
src/localctrl/: __init__.py  config.py  core.py  data.py  logger.py  root.py  user.py  utils.py
src/localctrl/api/: app.py  auth.py  plugins.py  system.py  users.py
src/localctrl/config/: settings.py
src/localctrl/core/: engine.py
src/localctrl/models/: database.py
src/localctrl/plugins/: __init__.py  base.py  core.py  media.py
src/localctrl/utils/: helpers.py
tests/: auto.py
(+1 files in other folders)
